Fix buttons alignment in photos section

--- a/src/stylus/partials/utilites.styl
+++ b/src/stylus/partials/utilites.styl
@@ -6,6 +6,10 @@
   text-align: right
 }
 
+.u-text-align--center {
+  text-align: center
+}
+
 .clearfix:before,
 .clearfix:after {
   display: table;
